--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-js-pagination": "^3.0.2",
+    "react-router-dom": "^4.4.0-beta.6",
+    "react-scripts": "2.1.3",
+    "react-to-print": "^2.0.0-alpha-6",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
