--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-s-alert": "^1.4.1",
     "react-scripts": "2.1.3",
     "react-to-print": "^2.0.0-alpha-6",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "webpack": "4.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
